--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,6 @@
 <header>
   <nav>
+    <h1>HOLA ¡Estoy haciendo una prueba!? * + - / </h1>
     <ul>
       <li>Casting & Empleos</li>
       <li>Planes</li> 
@@ -8,4 +9,7 @@
       <li>iniciar Sesión</li>
     </ul>
   </nav>
+  <p>
+    Este es un texto de pueba. Quiero ver como se ven las fuentes que descargué.
+  </p>
 </header>
